# HALO

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  mlc_config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  research_contribution.md
.github/workflows/: ci.yml  docs.yml  release.yml
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/halo/: HaloApp.kt  MainActivity.kt
android/app/src/main/kotlin/com/halo/intervention/: SoftInterventionActivity.kt
android/app/src/main/kotlin/com/halo/ml/: MidmClassifier.kt
android/app/src/main/kotlin/com/halo/risk/: RiskEngine.kt  ScamTypes.kt
android/app/src/main/kotlin/com/halo/services/: HaloForegroundService.kt  SmsReceiver.kt
android/app/src/main/kotlin/com/halo/ui/: MainScreen.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: data_extraction_rules.xml
configs/: base.yaml  eval.yaml  model_midm_mini.yaml
docs/: BENCHMARKS.md  DECISIONS.md  FAQ.md  GLOSSARY.md  IRB_PROTOCOL.md  architecture.md  evaluation.md  metacognition.md  privacy.md  roadmap.md  scam_taxonomy.md  whitepaper.md
docs/diagrams/: README.md  architecture.mmd  dataflow.mmd
docs/images/: README.md
experiments/baseline_v0_solar_pro/: report.md  report_solar_mini.md  results.json  results_solar_mini.json
family_web/: README.md  index.html  package.json
family_web/src/: App.tsx
notebooks/: 01_corpus_exploration.ipynb
scripts/: benchmark_mi_dm.py  build_corpus.py  check_env.py  evaluate.py  train.py
src/halo/: __init__.py
src/halo/corpus/: __init__.py  adversarial.py  collectors.py  schema.py
src/halo/demo/: __init__.py  classifier_demo.py
src/halo/inference/: __init__.py  onnx_export.py
src/halo/mobile_export/: __init__.py
src/halo/models/: __init__.py  classifier.py  probe.py  risk.py
src/halo/serving/: __init__.py  family_api.py  report_gen.py
src/halo/training/: __init__.py  evaluate.py  lora_finetune.py
tests/: test_adversarial.py  test_probe_integration.py  test_risk_engine.py  test_schema.py
