[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "halo"
version = "0.1.0"
description = "HALO: Holistic Agent for Local-inference Observation. On-device Korean sLLM scam defense for elder users."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Dayeon Kang", email = "dayeon603@gmail.com" }
]
requires-python = ">=3.11"
keywords = ["sllm", "scam-detection", "metacognition", "korean-nlp", "on-device", "elder-care"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Korean",
]

dependencies = [
    # Core ML
    "torch>=2.3.0",
    "transformers>=4.44.0",
    "peft>=0.12.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.33.0",
    "datasets>=2.20.0",
    # Korean NLP
    "soynlp>=0.0.493",
    # Audio
    "openai-whisper>=20231117",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    # Inference / export
    "onnx>=1.16.0",
    "onnxruntime>=1.18.0",
    "optimum>=1.21.0",
    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=16.0.0",
    "pandera[pandas]>=0.20.0",
    # Config / infra
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "loguru>=0.7.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    # Serving
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    # Security
    "pynacl>=1.5.0",  # libsodium bindings for E2E encryption
    # Experiment tracking
    "wandb>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.4.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-pyyaml",
    "pre-commit>=3.7.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]

[project.scripts]
halo-build-corpus = "halo.scripts.build_corpus:main"
halo-train = "halo.scripts.train:main"
halo-evaluate = "halo.scripts.evaluate:main"
halo-export-mobile = "halo.scripts.export_mobile:main"

[project.urls]
Homepage = "https://github.com/dayeon603-pixel/HALO"
Repository = "https://github.com/dayeon603-pixel/HALO"
Issues = "https://github.com/dayeon603-pixel/HALO/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/halo"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PIE", "SIM", "RET"]
ignore = ["E501"]  # line length handled by black

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: mark test as slow (deselect with '-m \"not slow\"')",
    "gpu: mark test as requiring GPU",
    "integration: mark test as integration test",
]
